# learning-rust

./: .env  Cargo.toml  README.md  debug  display  sanbox1
foo/: Cargo.toml
foo/src/: client.rs  main.rs
src/: assert_test.rs  cfg_from_file.rs  cli.rs  codec_demo.rs  env_var.rs  library.example  main.rs  sanbox1.rs  url_host.rs
