[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
parity-scale-codec = "3.1.2"           # SCALE - Simple Concatenating Aggregated Little Endians
parity-scale-codec-derive = "3.1.2"    # Serialization and deserialization derive macro for Parity SCALE Codec
clap = { version = "3.1.8", features = ["derive"] }